add solution for Q5-Q6

--- a/06-best-practices/hw06.ipynb
+++ b/06-best-practices/hw06.ipynb
@@ -1005,24 +1005,307 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***Answer for Q5:==*** "
+    "## Q5. Creating test data\n",
+    "\n",
+    "Now let's create `integration_test.py`\n",
+    "\n",
+    "We'll use the dataframe we created in Q3 (the dataframe for the unit test)\n",
+    "and save it to S3. You don't need to do anything else: just create a dataframe \n",
+    "and save it.\n",
+    "\n",
+    "We will pretend that this is data for January 2023.\n",
+    "\n",
+    "Run the `integration_test.py` script. After that, use AWS CLI to verify that the \n",
+    "file was created. \n",
+    "\n",
+    "Use this snipped for saving the file:\n",
+    "\n",
+    "```python\n",
+    "df_input.to_parquet(\n",
+    "    input_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False,\n",
+    "    storage_options=options\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "What's the size of the file?\n",
+    "\n",
+    "* 3620\n",
+    "* 23620\n",
+    "* 43620\n",
+    "* 63620\n",
+    "\n",
+    "Note: it's important to use the code from the snippet for saving\n",
+    "the file. Otherwise the size may be different depending on the OS,\n",
+    "engine and compression. Even if you use this exact snippet, the size\n",
+    "of your dataframe may still be a bit off. Just select the closest option."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch integration_test.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ***Answer for Q6:==*** "
+    "code for integration_test.py\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "\n",
+    "from batch import get_input_path\n",
+    "\n",
+    "\n",
+    "def dt(hour, minute, second=0):\n",
+    "    return datetime(2023, 1, 1, hour, minute, second)\n",
+    "\n",
+    "\n",
+    "data = [\n",
+    "    (None, None, dt(1, 1), dt(1, 10)),\n",
+    "    (1, 1, dt(1, 2), dt(1, 10)),\n",
+    "    (1, None, dt(1, 2, 0), dt(1, 2, 59)),\n",
+    "    (3, 4, dt(1, 2, 0), dt(2, 2, 1))\n",
+    "]\n",
+    "\n",
+    "columns_test_df = ['PULocationID', 'DOLocationID', 'tpep_pickup_datetime', 'tpep_dropoff_datetime']\n",
+    "test_df = pd.DataFrame(data, columns=columns_test_df)\n",
+    "\n",
+    "s3_endpoint_url = os.getenv('S3_ENDPOINT_URL')\n",
+    "options = {'client_kwargs': {'endpoint_url': s3_endpoint_url}}\n",
+    "\n",
+    "input_file = get_input_path(2023, 1)\n",
+    "test_df.to_parquet(\n",
+    "    input_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False,\n",
+    "    storage_options=options\n",
+    ")\n",
+    "print(f'File saved to S3, input_file is {input_file}')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! chmod +x run_integration_test_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run_integration_test_py_local.sh\n",
+    "```python\n",
+    "#!/bin/bash\n",
+    "\n",
+    "# Set environment variables\n",
+    "export INPUT_FILE_PATTERN=\"s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\"\n",
+    "export S3_ENDPOINT_URL=\"http://localhost:4566\"\n",
+    "\n",
+    "# Run the test python script\n",
+    "python integration_test.py\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved to S3, input_file is s3://nyc-duration/in/2023-01.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ./run_integration_test_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3620\n"
+     ]
+    }
+   ],
+   "source": [
+    "! aws --endpoint-url=http://localhost:4566 s3api head-object --bucket nyc-duration --key in/2023-01.parquet --query 'ContentLength'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q5:==*** 3620"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6. Finish the integration test\n",
+    "\n",
+    "We can read from our localstack s3, but we also need to write to it.\n",
+    "\n",
+    "Create a function `save_data` which works similarly to `read_data`,\n",
+    "but we use it for saving a dataframe. \n",
+    "\n",
+    "Let's run the `batch.py` script for January 2023 (the fake data\n",
+    "we created in Q5). \n",
+    "\n",
+    "We can do that from our integration test in Python: we can use\n",
+    "`os.system` for doing that (there are other options too). \n",
+    "\n",
+    "Now it saves the result to localstack.\n",
+    "\n",
+    "The only thing we need to do now is to read this data and \n",
+    "verify the result is correct. \n",
+    "\n",
+    "What's the sum of predicted durations for the test dataframe?\n",
+    "\n",
+    "* 13.08\n",
+    "* 36.28\n",
+    "* 69.28\n",
+    "* 81.08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded from S3, INPUT_FILE_PATTERN is s3://nyc-duration/in/{year:04d}-{month:02d}.parquet\n",
+      "predicted mean duration: 18.138625226015364\n",
+      "File saved to S3, OUTPUT_FILE_PATTERN is s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets change month in run_batch_py_local and run it\n",
+    "! ./run_batch_py_local.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>predicted_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023/01_0</td>\n",
+       "      <td>23.197149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023/01_1</td>\n",
+       "      <td>13.080101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ride_id  predicted_duration\n",
+       "0  2023/01_0           23.197149\n",
+       "1  2023/01_1           13.080101"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3_endpoint_url = 'http://localhost:4566'\n",
+    "options = {'client_kwargs': {'endpoint_url': s3_endpoint_url}}\n",
+    "\n",
+    "year, month = 2023, 1\n",
+    "output_file = f\"s3://nyc-duration/out/{year:04d}-{month:02d}.parquet\"\n",
+    "df = pd.read_parquet(output_file, storage_options=options)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.28"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.predicted_duration.sum().round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Answer for Q6:==*** 36.28"
    ]
   }
  ],
